--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-alert": "^6.0.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
     "react-flexbox-grid": "^2.1.2",
